[PF-1540] Update Sam & TCL clients -- WIP (#837)
* PF-1965: When cloning resources, clear certain properties (a.k.a TERRA_WORKSPACE_FOLDER_ID) (#826)

* clear terra_workspace_folder_id key on cloning

* spotless

* add comment

* add comment

* spotless

* when destination workspace is the same as source, do not clear the property

* PF-1984: add folder properties (#832)

* add folder properties

* fix a check

* address comments

* bump 0.254.392

* [PF-1930] Fix dismal failure with CreateStorageTransferServiceJobStep undo (#833)

* [PF-1930] Fix dismal failure with CreateStorageTransferServiceJobStep undo

* fix test

* beforeAll afterAll

* call workspaceService.deleteWorkspace and delete WorkspaceConnectedTestUtils.deleteWorkspaceAndCloudContext

* bump 0.254.393

* changes to root project

* Java 17 support

Co-authored-by: Yu Hu <93544261+yuhuyoyo@users.noreply.github.com>
Co-authored-by: bumptagbot <robot@terra.team>
Co-authored-by: melissachang <10929390+melissachang@users.noreply.github.com>