@@ -1,9 +1,15 @@
 package bio.terra.workspace.app.controller;
 
+import static bio.terra.workspace.app.controller.shared.PropertiesUtils.convertApiPropertyToMap;
+import static bio.terra.workspace.app.controller.shared.PropertiesUtils.convertMapToApiProperties;
+import static bio.terra.workspace.common.utils.ControllerValidationUtils.validatePropertiesDeleteRequestBody;
+import static bio.terra.workspace.common.utils.ControllerValidationUtils.validatePropertiesUpdateRequestBody;
+
 import bio.terra.workspace.generated.controller.FolderApi;
 import bio.terra.workspace.generated.model.ApiCreateFolderRequestBody;
 import bio.terra.workspace.generated.model.ApiFolder;
 import bio.terra.workspace.generated.model.ApiFolderList;
+import bio.terra.workspace.generated.model.ApiProperty;
 import bio.terra.workspace.generated.model.ApiUpdateFolderRequestBody;
 import bio.terra.workspace.service.folder.FolderService;
 import bio.terra.workspace.service.folder.model.Folder;
@@ -15,7 +21,6 @@ import bio.terra.workspace.service.iam.model.SamConstants.SamWorkspaceAction;
 import bio.terra.workspace.service.workspace.WorkspaceService;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 import javax.servlet.http.HttpServletRequest;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
@@ -53,7 +58,8 @@ public class FolderApiController extends ControllerBase implements FolderApi {
                 workspaceId,
                 body.getDisplayName(),
                 body.getDescription(),
-                body.getParentFolderId()));
+                body.getParentFolderId(),
+                convertApiPropertyToMap(body.getProperties())));
     return new ResponseEntity<>(buildFolder(folder), HttpStatus.OK);
   }
 
@@ -94,8 +100,7 @@ public class FolderApiController extends ControllerBase implements FolderApi {
 
     var response =
         new ApiFolderList()
-            .folders(
-                folders.stream().map(folder -> buildFolder(folder)).collect(Collectors.toList()));
+            .folders(folders.stream().map(FolderApiController::buildFolder).toList());
     return new ResponseEntity<>(response, HttpStatus.OK);
   }
 
@@ -107,11 +112,37 @@ public class FolderApiController extends ControllerBase implements FolderApi {
     return new ResponseEntity<>(HttpStatus.NO_CONTENT);
   }
 
+  @Override
+  public ResponseEntity<Void> updateFolderProperties(
+      UUID workspaceUuid, UUID folderUuid, List<ApiProperty> properties) {
+    AuthenticatedUserRequest userRequest = getAuthenticatedInfo();
+    workspaceService.validateWorkspaceAndAction(
+        userRequest, workspaceUuid, SamConstants.SamWorkspaceAction.WRITE);
+
+    validatePropertiesUpdateRequestBody(properties);
+
+    folderService.updateFolderProperties(
+        workspaceUuid, folderUuid, convertApiPropertyToMap(properties));
+    return new ResponseEntity<>(HttpStatus.NO_CONTENT);
+  }
+
+  @Override
+  public ResponseEntity<Void> deleteFolderProperties(
+      UUID workspaceUuid, UUID folderUuid, List<String> propertyKeys) {
+    AuthenticatedUserRequest userRequest = getAuthenticatedInfo();
+    validatePropertiesDeleteRequestBody(propertyKeys);
+    workspaceService.validateWorkspaceAndAction(
+        userRequest, workspaceUuid, SamConstants.SamWorkspaceAction.WRITE);
+    folderService.deleteFolderProperties(workspaceUuid, folderUuid, propertyKeys);
+    return new ResponseEntity<>(HttpStatus.NO_CONTENT);
+  }
+
   private static ApiFolder buildFolder(Folder folder) {
     return new ApiFolder()
         .id(folder.id())
         .displayName(folder.displayName())
         .description(folder.description())
-        .parentFolderId(folder.parentFolderId());
+        .parentFolderId(folder.parentFolderId())
+        .properties(convertMapToApiProperties(folder.properties()));
   }
 }
